--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,5 @@ spring.thymeleaf.cache=false
 
 server.port=8080
 
-
-spring.security.user.name=admin
+spring.security.user.name=user
 spring.security.user.password=password
