--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+
 spring.thymeleaf.cache=false
 
 server.port=8080
 
 spring.security.user.name=user
 spring.security.user.password=password
+
+# Disable default Whitelabel error page
+server.error.whitelabel.enabled=false
+
+# If you prefer exceptions for 404s instead of ErrorController handling,
+# uncomment the next two lines. With CustomErrorController present, this is optional.
+# spring.mvc.throw-exception-if-no-handler-found=true
+# spring.web.resources.add-mappings=false
