--- a/medi-tracker-frontend/tsconfig.json
+++ b/medi-tracker-frontend/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["DOM", "ES2020"],
     "types": ["vite/client"],
     "module": "ESNext",
-    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
@@ -13,7 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "jsx": "react-jsx",
-    "baseUrl": "src",
+    "allowImportingTsExtensions": true,
     "noEmit": true
   },
   "include": ["src"]
