--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ target/
 *.iml
 *.ipr
 
-/node_modules/
+/medi-tracker-frontend/node_modules/
 
 ### Eclipse ###
 .apt_generated
@@ -45,7 +45,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+medi-tracker-frontend/node_modules
 dist
 dist-ssr
 *.local
