--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
-
+# Limit request body size to prevent DOS attacks (50MB max for JSON uploads)
+spring.servlet.multipart.max-file-size=128MB
+spring.servlet.multipart.max-request-size=128MB
+server.tomcat.max-swallow-size=128MB
 
 server.port=8080
 
