--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
+### Maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
-
-/medi-tracker-frontend/node_modules/
 
 ### Eclipse ###
 .apt_generated
@@ -36,8 +32,21 @@ build/
 ### VS Code ###
 .vscode/
 
-# Logs
-logs
+### Qodo (AI Code Assistant) ###
+.qodo/
+
+### Node.js / React Frontend ###
+medi-tracker-frontend/node_modules/
+medi-tracker-frontend/dist/
+medi-tracker-frontend/.vite/
+medi-tracker-frontend/dist-ssr/
+node_modules/
+dist/
+dist-ssr/
+*.local
+
+### Logs ###
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -45,10 +54,22 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-medi-tracker-frontend/node_modules
-dist
-dist-ssr
-*.local
+### Environment Variables ###
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+### OS Files ###
+.DS_Store
+Thumbs.db
+
+### Database Backups (if sensitive) ###
+# Uncomment if you don't want to track database backups
+# db-backup/*.sql
+# deploy/db-backup/*.sql
+
 
 # Editor directories and files
 .vscode/*
