fixed database mygration, default seeded admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/meditracker
-spring.datasource.username=meditracker_user
+spring.datasource.username=myuser
 spring.datasource.password=meditracker_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
